# bank-to-ofx

./: README.md  pyproject.toml
bank_to_ofx/: cli.py  ofx.py  utils.py
bank_to_ofx/parsers/: __init__.py  desjardins.py  wealthsimple.py
